update DoubleLayerPdfGenerateTask